--- a/16_Control-Flow/index.html
+++ b/16_Control-Flow/index.html
@@ -8,5 +8,6 @@
 <body>
     <script src="./If_Else.js"></script>
     <script src="./Switch.js"></script>
+    <script src="./Turuthy_Falsy.js"></script>
 </body>
 </html>
