Do_and_Do_while

--- a/17_For_loop/index.html
+++ b/17_For_loop/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./index.js"></script>
+    <script src="./For_Loop.js"></script>
+    <script src="./While_Do_While.js"></script>
 </body>
 </html>
