--- a/20_DOM/index.html
+++ b/20_DOM/index.html
@@ -14,6 +14,8 @@
     </style>
 </head>
 <body>
+    <!-- For DOM basics -->
+
     <!-- <div class="back">
         <h1 id="title" class="heading">Dom Learning  <span style="display: none;">hy</span></h1>
         <h2>Lorem ipsum dolor sit amet.</h2>
@@ -29,6 +31,7 @@
         </ul>
     </div> -->
 
+    <!-- For DOM Relation -->
 
     <!-- <div class="parent">
         this commit for NodeList
@@ -38,8 +41,15 @@
         <div class="day">Thrusday</div>
     </div> -->
 
-    <script src="./DOM_relation.js"></script>
+    <!-- For Edit or Remove Element from Dom -->
+
+    <ul class="language" style="color: white;">
+        <li>JavaScript</li>
+    </ul>
+
+    <!-- <script src="./DOM_relation.js"></script>
     <script src="./index.js"></script>
-    <script src="./Node_List.js"></script>
+    <script src="./Node_List.js"></script> -->
+    <script src="./E_and_R_Element-from-DOM.js"></script>
 </body>
 </html>
